--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -20,8 +20,8 @@ server {
     server_name _;
 
     # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/YOUR_DOMAIN/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/YOUR_DOMAIN/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/media-server.yourdumbwebsite.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/media-server.yourdumbwebsite.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
@@ -48,6 +48,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Preserve query string parameters
+        proxy_set_header X-Original-URI $request_uri;
 
         # WebSocket specific timeouts
         proxy_read_timeout 86400;
