--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -39,9 +39,9 @@ server {
         proxy_pass http://media-stream:8080;
         proxy_http_version 1.1;
 
-        # WebSocket upgrade headers
+        # WebSocket upgrade headers (conditional)
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
 
         # Standard proxy headers
         proxy_set_header Host $host;
