--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,12 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss;
 
+    # Map for WebSocket upgrade header
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
 }
